--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@ body {
      font-family: 'Open Sans', sans-serif;
      font-size: 20px;
 	font-weight: 400;
-     background-image: linear-gradient(-25deg, #f2f2f2 50%, #5b4a9a 50%);
+     background-image: linear-gradient(-25deg, #f2f2f2 50%, #1333c4 50%);
      display: flex;
      align-items: center;
 }
@@ -59,7 +59,7 @@ header {
 }
 
 .menu a:hover {
-	border-bottom: 2px solid #f2c968;
+	border-bottom: 2px solid #1b1eec;
 }
 
 main {
@@ -79,9 +79,9 @@ main .contenedor-img {
      margin-bottom: 40px;
 }
 
-.contenedor-texto .mascota {
+.contenedor-texto .direct {
      font-weight: bold;
-     color: #c99806;
+     color: #0609c9;
      font-style: normal;
 }
 
@@ -102,7 +102,7 @@ main .contenedor-img {
 .btn-link:hover,
 .btn-link.activo {
 	color: #fff;
-	background: #5b4a9a;
+	background: #1c1fd3;
 }
 
 @media screen and (max-width: 915px) {
